# EmbodiedGen

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
apps/: common.py  image_to_3d.py  text_to_3d.py  texture_edit.py
apps/assets/example_layout/: task_list.txt
apps/assets/example_scene/: text_prompts.txt
apps/assets/example_texture/: text_prompts.txt
docker/: Dockerfile  README.md
embodied_gen/data/: asset_converter.py  backproject.py  backproject_v2.py  convex_decomposer.py  datasets.py  differentiable_render.py  mesh_operator.py  utils.py
embodied_gen/envs/: pick_embodiedgen.py
embodied_gen/models/: delight_model.py  gs_model.py  image_comm_model.py  layout.py  segment_model.py  sr_model.py  text_model.py  texture_model.py
embodied_gen/scripts/: compose_layout.py  gen_layout.py  gen_scene3d.py  gen_texture.py  imageto3d.py  parallel_sim.py  render_gs.py  render_mv.py  simulate_sapien.py  text2image.py  textto3d.py  textto3d.sh  texture_gen.sh
embodied_gen/trainer/: gsplat_trainer.py  pono2mesh_trainer.py
embodied_gen/utils/: config.py  enum.py  gaussian.py  geometry.py  gpt_clients.py  gpt_config.yaml  log.py  monkey_patches.py  process_media.py  simulation.py  trender.py
embodied_gen/validators/: aesthetic_predictor.py  quality_checkers.py  urdf_convertor.py
install/: _utils.sh  install_basic.sh  install_extra.sh
scripts/: check_lint.py
scripts/lint/: autoformat.sh  check_pylint.sh
scripts/lint_src/: cpplint.hook  lint.py  pep8.hook  pydocstyle.hook
tests/test_examples/: test_aesthetic_predictor.py  test_asset_converter.py  test_quality_checkers.py  test_urdf_convertor.py
tests/test_integration/: test_pipeline.sh
tests/test_unit/: test_agents.py  test_gpt_client.py  test_mesh_process.py
